@@ -3,6 +3,7 @@ package com.intellij.openapi.vfs;
 
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.WriteAction;
+import com.intellij.openapi.application.ex.ApplicationManagerEx;
 import com.intellij.openapi.application.ex.PathManagerEx;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleType;
@@ -26,6 +27,7 @@ import com.intellij.openapi.vfs.newvfs.ManagingFS;
 import com.intellij.openapi.vfs.newvfs.NewVirtualFile;
 import com.intellij.openapi.vfs.newvfs.RefreshQueue;
 import com.intellij.openapi.vfs.newvfs.RefreshSession;
+import com.intellij.openapi.vfs.newvfs.events.VFileCreateEvent;
 import com.intellij.openapi.vfs.newvfs.impl.VirtualDirectoryImpl;
 import com.intellij.testFramework.EdtTestUtil;
 import com.intellij.testFramework.PlatformTestUtil;
@@ -61,7 +63,7 @@ import static org.junit.Assert.*;
 import static org.junit.Assume.assumeTrue;
 
 public class VfsUtilTest extends BareTestFixtureTestCase {
-  @Rule public TempDirectory myTempDir = new TempDirectory();
+  @Rule public TempDirectory tempDir = new TempDirectory();
 
   @Test
   public void testFixIdeaUrl() {
@@ -109,7 +111,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testFindChildWithTrailingSpace() {
-    File tempDir = myTempDir.newDirectory();
+    File tempDir = this.tempDir.newDirectory();
     VirtualFile vDir = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir);
     assertNotNull(vDir);
     assertTrue(vDir.isDirectory());
@@ -122,7 +124,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testDirAttributeRefreshes() throws IOException {
-    File file = myTempDir.newFile("test");
+    File file = tempDir.newFile("test");
     VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file);
     assertNotNull(vFile);
     assertFalse(vFile.isDirectory());
@@ -142,7 +144,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testPresentableUrlSurvivesDeletion() throws IOException {
-    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(myTempDir.newFile("file.txt"));
+    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir.newFile("file.txt"));
     assertNotNull(file);
     String url = file.getPresentableUrl();
     assertNotNull(url);
@@ -216,7 +218,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testFindRootWithDenormalizedPath() {
-    File tempJar = IoTestUtil.createTestJar(myTempDir.newFile("test.jar"));
+    File tempJar = IoTestUtil.createTestJar(tempDir.newFile("test.jar"));
     VirtualFile jar = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempJar);
     assertNotNull(jar);
 
@@ -225,8 +227,8 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
     assertNotNull(root1);
     assertSame(root1, root2);
 
-    assertNull(LocalFileSystem.getInstance().findFileByPath("//../blah-blah")); // must not crash in FsRoot("//..")
-    assertNull(LocalFileSystem.getInstance().findFileByPath("//./blah-blah")); // must not crash in FsRoot("//.")
+    assertNull(LocalFileSystem.getInstance().findFileByPath("//../blah-blah")); // it must not crash in FsRoot("//..")
+    assertNull(LocalFileSystem.getInstance().findFileByPath("//./blah-blah")); // it must not crash in FsRoot("//.")
   }
 
   @Test
@@ -242,7 +244,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testNotCanonicallyNamedChild() throws IOException {
-    File tempDir = myTempDir.newDirectory();
+    File tempDir = this.tempDir.newDirectory();
     assertTrue(new File(tempDir, "libFiles").createNewFile());
     assertTrue(new File(tempDir, "CssInvalidElement").createNewFile());
     assertTrue(new File(tempDir, "extFiles").createNewFile());
@@ -277,34 +279,37 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
   private void doRenameAndRefreshTest(boolean full) throws IOException {
     assertFalse(ApplicationManager.getApplication().isDispatchThread());
 
-    File tempDir = myTempDir.newDirectory();
-    assertTrue(new File(tempDir, "child").createNewFile());
-
-    VirtualFile parent = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir);
+    File testFile = tempDir.newFile("test/child.txt");
+    VirtualFile parent = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(testFile.getParentFile());
     assertNotNull(parent);
     if (full) {
       assertEquals(1, parent.getChildren().length);
     }
-    VirtualFile child = parent.findChild("child");
+    VirtualFile child = parent.findChild(testFile.getName());
     assertNotNull(child);
 
-    List<VirtualFile> files = Collections.singletonList(parent);
+    ApplicationManagerEx.setInStressTest(true);
+    try {
+      List<VirtualFile> files = List.of(parent);
+      Semaphore semaphore = new Semaphore();
+      for (int i = 0; i < 1000; i++) {
+        semaphore.down();
+        VfsUtil.markDirty(true, false, parent);
+        LocalFileSystem.getInstance().refreshFiles(files, true, true, semaphore::up);
 
-    Semaphore semaphore = new Semaphore();
-    for (int i = 0; i < 1000; i++) {
-      semaphore.down();
-      VfsUtil.markDirty(true, false, parent);
-      LocalFileSystem.getInstance().refreshFiles(files, true, true, semaphore::up);
+        assertTrue(child.isValid());
+        String newName = "name" + i + ".txt";
+        WriteAction.runAndWait(() -> child.rename(this, newName));
+        assertTrue(child.isValid());
 
-      assertTrue(child.isValid());
-      String newName = "name" + i;
-      WriteAction.runAndWait(() -> child.rename(this, newName));
-      assertTrue(child.isValid());
+        TimeoutUtil.sleep(1);  // needed to prevent frequent event detector from triggering
+      }
 
-      TimeoutUtil.sleep(1);  // needed to prevent frequent event detector from triggering
+      semaphore.waitFor();
     }
-
-    semaphore.waitFor();
+    finally {
+      ApplicationManagerEx.setInStressTest(false);
+    }
   }
 
   @Test(timeout = 20_000)
@@ -333,15 +338,14 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
     );
   }
 
-  private void checkNewDirAndRefresh(@NotNull Consumer<? super Path> dirCreatedCallback,
-                                     @NotNull Consumer<? super AtomicBoolean> getAllExcludedCalledChecker) throws IOException {
+  private void checkNewDirAndRefresh(Consumer<Path> dirCreatedCallback, Consumer<AtomicBoolean> getAllExcludedCalledChecker) throws IOException {
     AtomicBoolean getAllExcludedCalled = new AtomicBoolean();
     ((ProjectManagerImpl)ProjectManager.getInstance()).testOnlyGetExcludedUrlsCallback(getTestRootDisposable(), () -> {
       getAllExcludedCalled.set(true);
       assertFalse(ApplicationManager.getApplication().isReadAccessAllowed());
     });
 
-    final File temp = myTempDir.newDirectory();
+    final File temp = tempDir.newDirectory();
     VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(temp);
     assertNotNull(vTemp);
     vTemp.getChildren(); //to force full dir refresh?!
@@ -367,10 +371,10 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
   @Test
   public void asyncRefreshInModalProgressCompletesWithinIt() {
     EdtTestUtil.runInEdtAndWait(() -> {
-      VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(myTempDir.getRoot());
+      VirtualDirectoryImpl vTemp = (VirtualDirectoryImpl)LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempDir.getRoot());
       assertThat(vTemp.getChildren()).isEmpty();
 
-      myTempDir.newFile("x.txt");
+      tempDir.newFile("x.txt");
 
       ProgressManager.getInstance().run(new Task.Modal(null, "", false) {
         @Override
@@ -398,9 +402,9 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   private void checkNonModalThenModalRefresh(boolean waitForDiskRefreshCompletionBeforeStartingModality) throws IOException {
     EdtTestUtil.runInEdtAndWait(() -> {
-      File dir1 = myTempDir.newDirectory("dir1");
-      File dir2 = myTempDir.newDirectory("dir2");
-      VirtualFile vDir = VfsUtil.findFileByIoFile(myTempDir.getRoot(), true);
+      File dir1 = tempDir.newDirectory("dir1");
+      File dir2 = tempDir.newDirectory("dir2");
+      VirtualFile vDir = VfsUtil.findFileByIoFile(tempDir.getRoot(), true);
       assertThat(Stream.of(vDir.getChildren()).map(VirtualFile::getName)).containsExactly(dir1.getName(), dir2.getName());
       VirtualFile vDir1 = vDir.getChildren()[0];
       VirtualFile vDir2 = vDir.getChildren()[1];
@@ -460,7 +464,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testVfsUtilCopyMustCopyBOMCorrectly() throws IOException {
-    File file = myTempDir.newFile("test.txt");
+    File file = tempDir.newFile("test.txt");
     VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file);
     assertNotNull(vFile);
     assertFalse(vFile.isDirectory());
@@ -477,7 +481,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testVfsUtilCopyMustCopyBOMCorrectlyForFileUnderProjectRoot() throws IOException {
-    File dir1 = myTempDir.newDirectory("dir1");
+    File dir1 = tempDir.newDirectory("dir1");
     Project project = PlatformTestUtil.loadAndOpenProject(Paths.get(dir1.getPath()), getTestRootDisposable());
     WriteAction.runAndWait(() -> {
       VirtualFile root = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(dir1);
@@ -500,7 +504,7 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
 
   @Test
   public void testVfsUtilCopyMustCopyBOMLessFileCorrectlyWhenEncodingProjectManagerBOMForNewFilesOptionIsSetToTrue() throws IOException {
-    File dir1 = myTempDir.newDirectory("dir1");
+    File dir1 = tempDir.newDirectory("dir1");
     Project project = PlatformTestUtil.loadAndOpenProject(Paths.get(dir1.getPath()), getTestRootDisposable());
     WriteAction.runAndWait(() -> {
       ((EncodingProjectManagerImpl)EncodingProjectManager.getInstance(project)).setBOMForNewUtf8Files(
@@ -529,10 +533,10 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
     IoTestUtil.assumeWslPresence();
     assumeTrue("'fsutil.exe' needs elevated privileges to work", SuperUserStatus.isSuperUser());
 
-    File dir = new File(myTempDir.getRoot(), "dir");
+    File dir = new File(tempDir.getRoot(), "dir");
     File file = new File(dir, "child.txt");
     assertFalse(file.exists());
-    assertEquals(myTempDir.getRoot().toString(), FileAttributes.CaseSensitivity.INSENSITIVE, FileSystemUtil.readParentCaseSensitivity(myTempDir.getRoot()));
+    assertEquals(tempDir.getRoot().toString(), FileAttributes.CaseSensitivity.INSENSITIVE, FileSystemUtil.readParentCaseSensitivity(tempDir.getRoot()));
 
     assertTrue(dir.mkdirs());
     assertTrue(file.createNewFile());
@@ -549,16 +553,10 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
   }
 
   @Test
-  public void pathEqualsWorksForWslPaths() throws IOException {
-    IoTestUtil.assumeWindows();
-    IoTestUtil.assumeWslPresence();
-    List<@NotNull String> distributions = IoTestUtil.enumerateWslDistributions();
-    assumeTrue("No WSL distributions found", !distributions.isEmpty());
-
-    String wslName = distributions.get(0);
+  public void pathEqualsWorksForWslPaths() {
+    String wslName = IoTestUtil.assumeWorkingWslDistribution();
     File usrBinFile = new File("\\\\wsl$\\" + wslName + "\\usr\\bin\\");
-    assertTrue(usrBinFile + " doesn't exist, despite " +distributions.size()+
-               " WSL distributions found: " + distributions, usrBinFile.exists());
+    assertTrue(usrBinFile + " doesn't exist", usrBinFile.exists());
     VirtualFile usrBin = LocalFileSystem.getInstance().findFileByIoFile(usrBinFile);
     assertTrue(VfsUtilCore.pathEqualsTo(usrBin, "\\\\wsl$\\" + wslName + "\\usr\\bin\\"));
     assertTrue(VfsUtilCore.pathEqualsTo(usrBin, "//wsl$/" + wslName + "/usr/bin"));
@@ -566,5 +564,16 @@ public class VfsUtilTest extends BareTestFixtureTestCase {
     assertFalse(VfsUtilCore.pathEqualsTo(usrBin, "//xxx$/" + wslName + "/usr/bin/"));
     assertFalse(VfsUtilCore.pathEqualsTo(usrBin, "//wsl$/xxx/usr/bin/"));
     assertFalse(VfsUtilCore.pathEqualsTo(usrBin.getParent(), "//wsl$/xxx/usr"));
+  }
+
+  @Test
+  public void testGetPathForVFileCreateEventForJarReturnsNormalizedPathSeparators() {
+    File jarFile = IoTestUtil.createTestJar(tempDir.newFile("test.jar"));
+    assertNotNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(jarFile));
+    VirtualFile jarRoot = VirtualFileManager.getInstance().findFileByUrl("jar://" + FileUtil.toSystemIndependentName(jarFile.getPath()) + "!/");
+    assertNotNull(jarRoot);
+
+    VFileCreateEvent event = new VFileCreateEvent(this, jarRoot, "x.txt", false, null, null, false, null);
+    assertEquals(FileUtil.toSystemIndependentName(jarFile.getPath()) + "!/x.txt", event.getPath());
   }
 }
